--- a/_posts/2006-03-28-i-lied.md
+++ b/_posts/2006-03-28-i-lied.md
@@ -6,7 +6,7 @@ layout: post
 title: I Lied.
 wp_id: 24
 ---
-2.6.16 will most likely be in Finnix after all. Realistically, the biggest reason against going to 2.6.16 was that I didn't expect Debian to have an updated config for 2.6.16 available in such a short time (I usually take configs from Debian because they offer the best general purpose kernel config), but [I was wrong](http://packages.debian.org/linux-source-2.6.16). The 2.6.16 kernels have been built and are being tested now. Note that the current snapshots are much larger than they should be, because there are currently both 2.6.16 and 2.6.15 kernels on there.
+2.6.16 will most likely be in Finnix after all. Realistically, the biggest reason against going to 2.6.16 was that I didn't expect Debian to have an updated config for 2.6.16 available in such a short time (I usually take configs from Debian because they offer the best general purpose kernel config), but [I was wrong](https://packages.debian.org/linux-source-2.6.16). The 2.6.16 kernels have been built and are being tested now. Note that the current snapshots are much larger than they should be, because there are currently both 2.6.16 and 2.6.15 kernels on there.
 
 This does not necessarily mean 2.6.16 is guaranteed. There is still more testing to be done, and if I find any problems, I'll just revert back to 2.6.15.
 
